--- a/app/src/main/res/layout/fragment_cartfragment.xml
+++ b/app/src/main/res/layout/fragment_cartfragment.xml
@@ -6,17 +6,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.Cartfragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="cart fragment"
-        tools:ignore="MissingConstraints" />
+
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
-        >
+        android:layout_marginBottom="55dp">
 
         <LinearLayout
             android:layout_width="match_parent"
