--- a/app/src/main/res/layout/item_shop.xml
+++ b/app/src/main/res/layout/item_shop.xml
@@ -1,73 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/shop_layout"
     android:backgroundTint="@color/cardview_light_background"
-    android:layout_margin="8dp"
-    android:outlineSpotShadowColor="@color/cardview_light_background"
+    android:layout_margin="2dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:orientation="vertical"
-        tools:ignore="MissingConstraints">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="0.5dp"
+        app:cardBackgroundColor="@color/white">
 
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/shop_pic"
-                android:layout_width="match_parent"
-                android:layout_height="110dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_baseline_add_a_photo_24"
-                android:layout_margin="5dp"/>
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="10dp"
+            android:paddingTop="12dp"
+            android:orientation="vertical">
 
             <LinearLayout
-
                 android:id="@+id/shop_details"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_marginTop="120dp"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginBottom="5dp"
-                android:background="@color/pink"
-                android:weightSum="2">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/shop_name"
+                <ImageView
+                    android:id="@+id/shop_pic"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:maxWidth="80dp"
+                    android:maxHeight="80dp"
+                    android:padding="0dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_baseline_add_a_photo_24"
+                    />
+
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:text="Shop Name"
-                    android:textColor="@color/white"
-                    android:textSize="15dp" />
+                    android:orientation="vertical">
 
-                <TextView
+                    <TextView
+                        android:id="@+id/shop_name"
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_marginLeft="25dp"
+                        android:layout_toRightOf="@+id/shop_details"
+                        android:text="Shop Name"
+                        android:textStyle="bold"
+                        android:textColor="@color/pink"
+                        android:textSize="15dp" />
 
-                    android:id="@+id/shop_address"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|right"
-                    android:text="Address:48/1 kasibose lane"
-                    android:textColor="@color/white"
-                    android:textSize="12dp" />
+                    <TextView
+                        android:id="@+id/shop_address"
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="5dp"
+                        android:layout_gravity="right"
+                        android:layout_marginLeft="25dp"
+                        android:layout_toRightOf="@+id/shop_details"
+                        android:layout_below="@+id/shop_name"
+                        android:text="Address:48/1 kasibose lane"
+                        android:maxLines="2"
+                        android:textColor="@color/black"
+                        android:textSize="15dp" />
+
+
+                </LinearLayout>
 
             </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
 
-    </LinearLayout>
+        </LinearLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</RelativeLayout>
