--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#F5F5F5</color>
+    <color name="red">#ff0000</color>
     <color name="green_700">#ba00dc00</color>
     <color name="pink">#ff1493</color>
     <color name="card">#fffaf2</color>
